--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,21 @@ jobs:
   hello_world_job:
     runs-on: ubuntu-latest
     name: A job to say hello
+    container:
+      image: ubuntu-latest
+      volumes:
+        - sample.json:/sample.json
     steps:
       # To use this repository's private action,
       # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: pwd
+        run: pwd
+
+      - name: ls -la
+        run: ls -la
 
       - name: Hello world action step
         uses: ./ # Uses an action in the root directory
