--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
         id: hello
         with:
           who-to-greet: "Mona the Octocat"
+          file_path: sample.json
+          field_value: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
