--- a/action.yml
+++ b/action.yml
@@ -20,3 +20,5 @@ runs:
   image: "Dockerfile"
   args:
     - ${{ inputs.who-to-greet }}
+    - ${{ inputs.file_path }}
+    - ${{ inputs.field_value }}
